# magic_dingus_box

./: .gitattributes  .gitignore  ARTIST_FIELD_IMPLEMENTATION.md  ASPECT_RATIO_EXPLAINED.md  BEZEL_CRT_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CRT_EFFECTS_GUIDE.md  CRT_SHADER_OPTIONS.md  DATA_SYNC_GUIDE.md  DEPLOY_TO_PI.md  DISPLAY_MODES_USAGE.md  EMULATOR_SETUP.md  FINAL_SUMMARY.md  GAMEPLAY_UI_LIMITATIONS.md  GAME_BROWSER_CHANGES.md  GAME_CONTROLS.md  IMPLEMENTATION_COMPLETE.md  MOBILE_USAGE_GUIDE.md  MODERN_DISPLAY_DESIGN.md  NEXT_STEPS_MODERN_DISPLAY.md  NTSC_config.md  PI_GAME_DEPLOYMENT.md  PI_VIDEO_PERFORMANCE_FIX.md  PROFESSIONAL_READINESS.md  QUICK_FIX_NO_SIGNAL.md  README.md  RETROARCH_BEZEL_INTEGRATION.md  SYNC_IMPLEMENTATION_COMPLETE.md  TESTING_DISPLAY_MODES.md  TEST_NEW_FEATURES.md  TEXT_OVERFLOW_FIXES.md  TOUCH_IMPLEMENTATION_SUMMARY.md  UI_BEZEL_INTEGRATION.md  UI_REORGANIZATION_COMPLETE.md  WEB_CONTENT_MANAGER_README.md  WEB_UI_QUICK_START.md  YAML_FORMAT_VERIFICATION.md  boot_config_template.txt  controller_diagnostic.sh  (+4 more)
assets/: README.md
autostart/: magic-dingus-box.desktop
dev_data/: device_info.json  settings.json
docs/: CRT_AND_BEZELS.md  PLAYLIST_FORMAT.md  WEB_UI_GUIDE.md
magic_dingus_box/: config.py  logging_setup.py  main.py
magic_dingus_box_cpp/: CMakeLists.txt  README.md  deploy_fixes.sh  drm_drop_master.c  test_audio.sh  test_game_launch.cpp  test_gst.cpp  test_ifaddrs.cpp  test_n64_audio.sh  test_n64_configs.sh  test_n64_optimization.sh  test_n64_resolution.sh  test_retroarch_launch.cpp  test_video_drivers.sh
magic_dingus_box_cpp/assets/bezels/: n64_tv.cfg  nes_tv.cfg  ps1_tv.cfg  retro_tv_1.cfg  tv_retro_1.cfg
magic_dingus_box_cpp/data/intro/: intro.30fps.mov
magic_dingus_box_cpp/data/playlists/: arcade.yaml  atari_7800.yaml  danny_gatton.yaml  paul_franklin.yaml  pc_engine.yaml  ps1_collection.yaml  retro_games.yaml  sega_genesis.yaml  snes.yaml
magic_dingus_box_cpp/scripts/: check_power_switch.sh  cleanup_old_system.sh  deploy_cpp.sh  generate_m3u_playlists.sh  init_audio.sh  install_cores.sh  install_deps.sh  led_boot_sequence.sh  led_shutdown_animation.sh  provision_user.sh  setup_usb_gadget.sh  update.sh
magic_dingus_box_cpp/scripts/tests/: manual_ota_test.sh  test_update.bats
magic_dingus_box_cpp/src/: main.cpp
magic_dingus_box_cpp/src/app/: app_state.h  controller.cpp  controller.h  playlist_loader.cpp  playlist_loader.h  sample_mode.cpp  sample_mode.h  settings_persistence.cpp  settings_persistence.h
magic_dingus_box_cpp/src/platform/: drm_display.cpp  drm_display.h  egl_context.cpp  egl_context.h  gbm_context.cpp  gbm_context.h  gpio_manager.cpp  gpio_manager.h  input_manager.cpp  input_manager.h
magic_dingus_box_cpp/src/retroarch/: retroarch_launcher.cpp  retroarch_launcher.cpp.backup  retroarch_launcher.h
magic_dingus_box_cpp/src/ui/: font_manager.cpp  font_manager.h  renderer.cpp  renderer.h  settings_menu.cpp  settings_menu.h  settings_renderer.h  theme.cpp  theme.h  virtual_keyboard.cpp  virtual_keyboard.h
magic_dingus_box_cpp/src/utils/: config.cpp  config.h  logger.h  path_resolver.cpp  path_resolver.h  result.h  wifi_manager.cpp  wifi_manager.h
magic_dingus_box_cpp/src/video/: controller.cpp  gst_helpers.h  gst_player.cpp  gst_player.h  gst_renderer.cpp  gst_renderer.h  mpv_player.cpp  mpv_player.h  mpv_renderer.cpp  mpv_renderer.h  video_player.h
magic_dingus_box_cpp/systemd/: led-boot-sequence.service  led-shutdown-animation.service  magic-dingus-box-cpp.service  migrate_to_cpp.sh  power-switch-check.service  setup_boot_service.sh
scripts/: README.md  auto_iterate_640x480.sh  auto_test_resolutions.sh  auto_test_resolutions_performance.sh  build_mupen64plus_next.sh  check_retroarch_audio_logs.sh  configure_hdmi_audio_final.sh  configure_retroarch_pi.sh  deploy_to_pi.sh  diagnose_controller_intro.sh  diagnose_retroarch_updater.sh  download_cores_armhf.sh  download_cores_final.sh  download_cores_from_github.sh  download_cores_mac.sh  download_cores_manual.sh  download_cores_retroarch_ui.sh  download_n64_core.sh  download_required_cores.sh  find_lowest_resolution.sh  fix_all_issues.sh  fix_controller_intro_final.sh  fix_core_downloader.sh  fix_database_extraction.sh  fix_hdmi.sh  fix_keyboard_now.sh  fix_retroarch_audio.sh  fix_retroarch_audio_now.sh  fix_retroarch_audio_persistent.sh  fix_retroarch_core_info.sh  fix_retroarch_keyboard.sh  install_cores_interactive.sh  install_cores_via_retroarch.sh  install_gstreamer.sh  install_n64_core.sh  install_retroarch_pi.sh  install_retropie_cores.sh  install_vlc.sh  iterative_resolution_test.sh  launch_retroarch.sh  (+32 more)
systemd/: README_HARDENED.md  magic-dingus-box-cpp.service  magic-dingus-web.service  magic-mpv-home.service  magic-mpv-x11.service  magic-mpv.hardened.service  magic-mpv.service  magic-ui-home.service  magic-ui-x11.service  magic-ui.hardened.service  (+1 more)
(+67 files in other folders)
